--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@ body {
 }
 
 .bg-wrapper {
-  background: url("./img/diversification.png") no-repeat center;
+  background: url("./img/coin2.png") no-repeat center;
   background-size: contain;
   flex-basis: 12em;
   width: 100%;
@@ -159,7 +159,7 @@ body {
 }
 
 .bg-wrapper2 {
-  background: url("./img/cryptocurrency.png") no-repeat center;
+  background: url("./img/graph1.png") no-repeat center;
   background-size: contain;
   flex-basis: 12em;
   width: 100%;
